# doc-ingest-pipeline

./: .env.example  .gitignore  Makefile  README.md  main.py  md2pdf.py  pyproject.toml
src/: config.py  exporters.py  models.py  parser.py  tailorer.py
src/cli_app/: __init__.py  main.py  md2pdf.py
src/core/: config.py  exporters.py  models.py  parser.py  tailorer.py
src/web_ui/: README.md  app.py  pyproject.toml
templates/: architect.md
